# rkengine

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  PHYSX_MIGRATE_PLAN.md  README.md  imgui.ini
apps/: CMakeLists.txt
apps/rkg_editor/: CMakeLists.txt
apps/rkg_editor/src/: main.cpp  subprocess_runner.cpp  subprocess_runner.h
apps/rkgctl/: CMakeLists.txt
apps/rkgctl/include/: README.md
apps/rkgctl/include/rkgctl/: cli_api.h
apps/rkgctl/src/: main.cpp
cmake/: helpers.cmake
cmake/toolchains/: mingw64.cmake
config/: engine.yaml
content/levels/: demo_level.yaml
content/prefabs/: base_cube.yaml
core/: CMakeLists.txt
core/include/rkg/: ai_results.h  asset_import.h  asset_types.h  config.h  content_pack.h  ecs.h  event_bus.h  host_context.h  input.h  instructions.h  json_write.h  locomotion.h  log.h  math.h  movement_log.h  paths.h  plugin_api.h  plugin_host.h  project.h  renderer_hooks.h  renderer_select.h  renderer_util.h  replay.h  run_cleanup.h  snapshot_restore.h  staged_runs.h  ui_log.h
core/src/: ai_results.cpp  asset_import.cpp  config.cpp  content_pack.cpp  ecs.cpp  input.cpp  instructions.cpp  json_write.cpp  locomotion.cpp  log.cpp  math.cpp  movement_log.cpp  paths.cpp  plugin_host.cpp  project.cpp  renderer_hooks.cpp  renderer_select.cpp  renderer_util.cpp  replay.cpp  run_cleanup.cpp  snapshot_restore.cpp  staged_runs.cpp  ui_log.cpp
docs/: AI_INSTRUCTIONS.md  AI_ORCHESTRATION.md  API_REFERENCE.md  ARCHITECTURE.md  DEVELOPMENT.md  LLM_REFERENCE.md  LOCOMOTION.md  PLAN.md  PLUGINS.md  ROADMAP.md  TECHNICAL_OVERVIEW.md  VISION.md
docs/agent_templates/openai/: example_context_pack.json  example_goal.txt  example_plan.json  planner_system.md  planner_user.md  responses_request_template.json
docs/examples/: openai_plan_request.example.json  openai_plan_response.example.json  plan_spawn_cube.json
docs/schemas/: rkg_plan.schema.json  rkg_run_info.schema.json  rkg_run_results.schema.json
examples/: CMakeLists.txt
examples/minimal_app/: CMakeLists.txt
examples/minimal_app/src/: main.cpp
platform/: CMakeLists.txt
platform/include/rkg_platform/: file_watcher.h  platform.h
platform/linux/: sdl_platform.cpp
platform/src/: file_watcher.cpp  platform.cpp
platform/stubs/: README.md
platform/stubs/android/: README.md
platform/stubs/ios/: README.md
platform/stubs/playstation/: README.md
platform/stubs/switch/: README.md
platform/stubs/xbox/: README.md
platform/windows/: platform_stub.cpp
plugins/: CMakeLists.txt
plugins/ai/: CMakeLists.txt
plugins/ai/include/rkg_ai/: ai.h
plugins/ai/src/: ai_stub.cpp
plugins/cloud/: CMakeLists.txt
plugins/cloud/include/rkg_cloud/: cloud.h
plugins/cloud/src/: cloud_stub.cpp
plugins/data/include/rkg_data/: database.h  serialization.h
plugins/data/json/: README.md
plugins/data/sqlite/: README.md
plugins/data/src/: CMakeLists.txt  data_io.cpp  data_json.cpp  data_yaml.cpp  database_sqlite.cpp
plugins/data/yaml/: README.md
plugins/debug_ui/: CMakeLists.txt
plugins/debug_ui/imgui/: CMakeLists.txt
plugins/debug_ui/imgui/include/rkg_debug_ui/: imgui_api.h
plugins/debug_ui/imgui/src/: imgui_plugin.cpp  imgui_runtime.cpp
plugins/physics/: CMakeLists.txt
plugins/physics/basic/: CMakeLists.txt
plugins/physics/basic/src/: physics_basic.cpp
plugins/renderer/: CMakeLists.txt
plugins/renderer/d3d12/: CMakeLists.txt
plugins/renderer/d3d12/include/: README.md
plugins/renderer/d3d12/shaders/: triangle.hlsl
plugins/renderer/d3d12/src/: d3d12_renderer.cpp
plugins/renderer/null/: CMakeLists.txt
plugins/renderer/null/include/: README.md
plugins/renderer/null/src/: null_renderer.cpp
plugins/renderer/rhi/: CMakeLists.txt
plugins/renderer/rhi/include/rkg_rhi/: mesh.h  rhi.h
plugins/renderer/rhi/src/: rhi.cpp
plugins/renderer/stubs/consoles/: README.md
plugins/renderer/stubs/metal/: README.md
plugins/renderer/vulkan/: CMakeLists.txt
plugins/renderer/vulkan/include/: README.md
plugins/renderer/vulkan/shaders/: mesh_skinned.frag  mesh_skinned.frag.spv  mesh_skinned.vert  mesh_skinned.vert.spv  mesh_textured.frag  mesh_textured.frag.spv  mesh_textured.vert  mesh_textured.vert.spv
plugins/renderer/vulkan/src/: vulkan_renderer.cpp
plugins/scripting/: CMakeLists.txt
plugins/scripting/include/rkg_script/: script_runtime.h
plugins/scripting/js/: CMakeLists.txt
plugins/scripting/js/include/: README.md
plugins/scripting/js/src/: js_runtime.cpp
plugins/scripting/lua/: CMakeLists.txt
plugins/scripting/lua/include/: README.md
plugins/scripting/lua/src/: lua_runtime.cpp
plugins/scripting/python/: CMakeLists.txt
plugins/scripting/python/include/: README.md
plugins/scripting/python/src/: python_runtime.cpp
plugins/scripting/src/: CMakeLists.txt  script_runtime.cpp
projects/: CMakeLists.txt
projects/demo_game/: CMakeLists.txt  project.yaml
projects/demo_game/config/: input.yaml
projects/demo_game/content/assets/manny/: asset.json  materials.json  skeleton.json
projects/demo_game/content/levels/: demo_level.yaml
projects/demo_game/content/prefabs/: demo_cube.yaml  demo_quad.yaml  ground_plane.yaml
projects/demo_game/src/: main.cpp
projects/template_game/: CMakeLists.txt  project.yaml
projects/template_game/config/: input.yaml
projects/template_game/content/levels/: level.yaml
projects/template_game/content/prefabs/: actor.yaml
projects/template_game/src/: main.cpp
runtime/: CMakeLists.txt
runtime/include/rkg/: asset_cache.h  runtime_host.h
runtime/src/: asset_cache.cpp  runtime_host.cpp
scripts/: build_linux.sh  check_gait_log.py
tests/: CMakeLists.txt
tests/src/: test_smoke.cpp
tools/: environment.yml
tools/python_optional/rkg_tools/: __init__.py
